# fast-template

./: README.md  pyproject.toml
app/: configs.py  endpoints.py  main.py  models.py  utils.py
user_app/: configs.py  endpoints.py  main.py  models.py  pydantic_schemas.py  utils.py
