[tool.poetry]
name = "nomore"
version = "0.1.0"
description = ""
authors = ["hlrrr <twfvtn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.1"}
starlette-admin = "^0.11.2"
sqlalchemy = "^2.0.20"
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.7"
sqlalchemy-utils = "^0.41.1"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
